decreasing PMD count
SVN-Revision: 23744